tests/tests/core/snapshots/main__core__create_game_tests__create_new_game.snap
---
source: crates/tests/tests/core/create_game_tests.rs
assertion_line: 51
expression: "Summary::run(&response)"
---

command_list: 
    RenderScreenOverlay: "<ScreenOverlay>"
